Fixed not being able to scroll on mobile

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,7 +9,6 @@
 
 body {
   margin: 0;
-  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   -webkit-font-smoothing: antialiased;
